JSAPI-3738: New theme link overflow fix

--- a/styles/style.less
+++ b/styles/style.less
@@ -476,7 +476,6 @@
     .features__list {
         position: relative;
         left: 19px;
-        overflow: hidden;
         margin: 0 0 0 -38px;
         white-space: nowrap;
         }
@@ -493,8 +492,8 @@
             }
             .features__list-item-section {
                 position: relative;
-                left: 57px;
-                margin-left: -114px;
+                left: 56px;
+                margin-left: -112px;
                 padding: 0 57px;
                 border-top: 1px solid #585856;
 
